# palmdoc-compression

./: Cargo.toml  README.md  build.rs
.github/workflows/: checks.yml  create-release.yml  publish.yml
benches/: calibre.rs  palmdoc.rs
calibre/: palmdoc.c  palmdoc.h
examples/: ratios.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decompress.rs  palmdoc.rs
resources/: war_and_peace.txt
src/: calibre.rs  hashtable.rs  lib.rs  palmdoc.rs  window.rs
