[package]
name = "palmdoc-compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.7.2"

[dev-dependencies]
hex = "0.4.3"
criterion = { version = "0.5", features = ["html_reports"] }
lipsum = "0.9.0"
rand = "0.8.5"

[profile.bench]
debug = true
strip = false

[[bench]]
name = "palmdoc"
harness = false
