[package]
name = "palmdoc-compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.153", optional = true }
suffix_array = "0.5.0"
thiserror = "1.0.58"

[dev-dependencies]
hex = "0.4.3"
criterion = { version = "0.5", features = ["html_reports"] }
lipsum = "0.9.0"
rand = "0.8.5"
pretty_assertions = "1.4.0"

[features]
calibre = ["dep:libc"]

[profile.bench]
debug = true
strip = false

[[bench]]
name = "palmdoc"
harness = false

[[bench]]
name = "calibre"
harness = false
required-features = ["calibre"]

[build-dependencies]
cc = "1.0"
