[package]
name = "palmdoc-compression"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Fast & safe implementation of PalmDoc/MOBI/AZW/Kindle flavored LZ77"
repository = "https://github.com/codetheweb/palmdoc-compression"
readme = "README.md"
exclude = ["examples/*", "resources/*"]

[dependencies]
libc = { version = "0.2.153", optional = true }
suffix_array = "0.5.0"
thiserror = "1.0.58"

[dev-dependencies]
hex = "0.4.3"
criterion = { version = "0.5", features = ["html_reports"] }
lipsum = "0.9.0"
rand = "0.8.5"
pretty_assertions = "1.4.0"

[features]
calibre = ["dep:libc"]

[profile.bench]
debug = true
strip = false

[[bench]]
name = "palmdoc"
harness = false

[[bench]]
name = "calibre"
harness = false
required-features = ["calibre"]

[build-dependencies]
cc = "1.0"
